src/main/core/Tests/Stub/plugin/Invalid/UnloadableBundleClass6/InvalidUnloadableBundleClass6.php
<?php

/*
 * This file is part of the Claroline Connect package.
 *
 * (c) Claroline Consortium <consortium@claroline.net>
 *
 * For the full copyright and license information, please view the LICENSE
 * file that was distributed with this source code.
 */

namespace Invalid\UnloadableBundleClass6;

class InvalidUnloadableBundleClass6
{
    /**
     * Invalid because it cannot be instantiated.
     */
    private function __construct()
    {
    }
}
